tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_traits_trait_inheritance_dependency_cycle/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Dependency cycle found
  ┌─ src/main.nr:2:15
  │
2 │         trait Foo: Bar {}
  │               --- 'Foo' recursively depends on itself: Foo -> Bar -> Foo
  │

Aborting due to 1 previous error
