tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_traits_trait_inheritance_dependency_cycle/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Dependency cycle found
  ┌─ src/main.nr:2:15
  │
2 │         trait Foo: Bar {}
  │               --- 'Foo' recursively depends on itself: Foo -> Bar -> Foo
  │

Aborting due to 1 previous error
